src/test/fun-test/semantic/DeclarationStrictConversion4.java.err
Semantic error: type mismatch - expected INT, got LONG, line 8, pos 19
